# mitou2022-prototype

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  pyproject.toml  text.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/media/file/2022/03/09/: running_data1.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Analysis.js  Data.js  File.js  Header.js  Upload.js  Users.js
frontend/src/components/data/: Data.js  DataSlice.js
